# reup

./: .coverage  .flake8  .gitignore  =6.0.1  CHANGELOG.md  CONTRIBUTING.md  README.md  base_monitor.py  config.py  exceptions.py  main_gui.py  monitor.py  monitor_gui.py  product_monitor.py  profile_manager.py  profile_monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  search_manager.py  setup.py  test_monitor.py  utils.py
.github/workflows/: ci.yml
profiles/: test_profile.json
reup/: dev.py
reup/api/: bestbuy.py
reup/config/: config.py  constants.py  logging.yaml  settings.py  styles.py
reup/core/: base_monitor.py  product_monitor.py  profile_monitor.py  task_monitor.py
reup/gui/: main_app.py  main_window.py
reup/managers/: cache_manager.py  profile_handler.py  profile_manager.py  request_manager.py  search_manager.py  security_manager.py
reup/utils/: exceptions.py  helpers.py  logger.py  performance.py  profile_validator.py  validators.py
scripts/: cleanup.py  debug_tests.py  run_tests.py  test_profile_handler.py  update_imports.py  watch.py
tests/: conftest.py  test_base_monitor.py  test_core.py  test_error_handling.py  test_gui.py  test_helper_utils.py  test_helpers.py  test_integration.py  test_managers.py  test_product_monitor.py  test_profile_handler.py  test_utils.py
tests/fixtures/: monitor_fixtures.py
tests/test_utils/: __init__.py  test_monitor.py
